=================

Notable User Facing Changes
---------------------------

- Dropped support for Clang/LLVM versions 6.0 to 9.0 (inclusive)
- Added support for program-scope variables in the CPU drivers
- Added support for generic address spaces in the CPU drivers
- Added basic support for cl_khr_subgroups for CPUs: A single
  subgroup that always executes the whole X-dimension's WIs.

3.1 December 2022
=================

Notable User Facing Changes
---------------------------

- Support for Clang/LLVM 15.0
- Work-in-progress Vulkan-driver:
  * implement clEnqRead/Copy/WriteRect + clEnqFillBuffer
  * implement global offsets
  * add support for external memory
  * implement WG sizes larger than vulkan limits with global offsets
  * fix module constants
  * and other small fixes and improvements
- SPIR-V support: much improved support for both CPU driver and CUDA
  * vectorized versions of kernel library functions now supported
  * much improved support on ARM64 & x86-64 with recent LLVMs
  * fixed some atomic builtin functions
  * SPIR-V new subtests from OpenCL-CTS now pass (with sufficiently recent
    llvm-spirv translator)
  * most of the CTS passes with offline-compile=spirv option
  * specialization constants are supported via clSetProgramSpecializationConstant
- improved Valgrind/Helgrind support
- All device names used to control the platform setup via
  POCL_DEVICES are now lower case (as documented in the user manual).
- Switch from __sync_*() to __atomic_*() (compiler builtins).
- Link with -latomic (compiler library) in case that is needed for using
  64-bit atomic operations, e.g. on mipsel.
- Basic support for cl_khr_command_buffer. Command parameters are validated
  at recording time and the command data is stored. When the command buffer
  is enqueued to a device, the recorded commands are submitted to the device
  as if their respective immediate clEnqueue* functions had been called just