@@ -775,7 +775,8 @@ option(ENABLE_SLEEF "Use SLEEF for kernel library" ON)
 
 option(ENABLE_CONFORMANCE "Enable conformance to OpenCL standard. \
   Enabling this option this does not guarantee conformance (depends on hardware), \
-  but CMake will give errors if options that conflict with conformance are used" OFF)
+  but CMake will give errors if options that conflict with conformance \
+are used. It also disables advertising incomplete extensions." OFF)
 
 if(ENABLE_CONFORMANCE AND (NOT ENABLE_SLEEF))
   message(FATAL_ERROR "conformance needs enabled SLEEF")
@@ -1201,8 +1202,8 @@ endif()
 
 
 set(HOST_DEVICE_EXTENSIONS "cl_khr_byte_addressable_store cl_khr_global_int32_base_atomics \
-  cl_khr_global_int32_extended_atomics cl_khr_local_int32_base_atomics \
-  cl_khr_local_int32_extended_atomics cl_khr_3d_image_writes cl_khr_command_buffer")
+cl_khr_global_int32_extended_atomics cl_khr_local_int32_base_atomics \
+cl_khr_local_int32_extended_atomics cl_khr_3d_image_writes cl_khr_command_buffer")
 
 if(LLVM_VERSION VERSION_GREATER_EQUAL 14.0)
   set(HOST_DEVICE_EXTENSIONS "${HOST_DEVICE_EXTENSIONS} cl_khr_subgroups")
@@ -1211,13 +1212,21 @@ endif()
 # Extensions that are work-in-progress with known unfinished aspects.
 # These are not advertised with a conformant build.
 #
-# * cl_khr_shuffle: Passes the CTS, but only because it doesn't test non-uniform
-# (lock-step) behavior: https://github.com/KhronosGroup/OpenCL-CTS/issues/1236
+# * cl_khr_subgroup_shuffle: Passes the CTS, but only because it doesn't test
+#   non-uniform(lock-step) behavior, see:
+#   https://github.com/KhronosGroup/OpenCL-CTS/issues/1236
 #
 # * cl_khr_subgroup_ballot: sub_group_ballot() works for uniform calls, the rest
 # are unimplemented.
+#
+# * cl_intel_subgroups: The block reads/writes are unimplemented.
+#
+# * cl_intel_required_subgroup_size: CL_​KERNEL_​SPILL_​MEM_​SIZE_​INTEL and
+#   CL_​KERNEL_​COMPILE_​SUB_​GROUP_​SIZE_​INTEL are yet to implement.
+#
 if(NOT ENABLE_CONFORMANCE)
-  set(HOST_DEVICE_EXTENSIONS "${HOST_DEVICE_EXTENSIONS} cl_khr_subgroup_ballot cl_khr_subgroup_shuffle")
+  set(HOST_DEVICE_EXTENSIONS "${HOST_DEVICE_EXTENSIONS} cl_khr_subgroup_ballot \
+cl_khr_subgroup_shuffle cl_intel_subgroups cl_intel_required_subgroup_size")
 endif()
 
 set(HOST_DEVICE_FEATURES_30 "__opencl_c_3d_image_writes  __opencl_c_images \
